# sonic_agent

./: .env.example  Cargo.toml  README.md  analyzed_vaults.json
crates/ai/: Cargo.toml
crates/ai/src/: ai.rs  claude.rs  deepseek.rs  lib.rs  types.rs
crates/defi/: Cargo.toml
crates/defi/src/: parser.rs  types.rs
crates/net/: Cargo.toml
crates/net/src/: build.rs  handlers.rs  lib.rs  parser.rs  types.rs
static/: index.html
