[package]
name = "sonic-defai-ai"
version = "0.1.0"
edition = "2024"

[dependencies]
anthropic.workspace = true
deepseek_rs.workspace = true
async-trait.workspace = true
sonic-defai-defi.workspace = true
reqwest = "0.12.14"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
anyhow = "1.0"
